test/end-to-end/compile-errors/extern-errors.crow
main void()
	()

r record extern
	a string
	b nat64 list

r2 record by-val, extern
	a nat64

r3 record by-ref, extern
	a nat64

u union extern
	a string

f void() extern

f void() libc extern

f string() libc extern

f void(a string) libc extern

f[t] void(a t) libc extern

f void(...a nat64 array) libc extern

some-spec spec
	foo void()

f void() libc extern, some-spec

f void() bare, libc extern

f void() unsafe, libc extern

g global(nat) libc extern

g global(nat)

g2 global(nat) builtin, libc extern

g3 global(nat) extern, bare, nat equal

tl thread-local(nat) libc extern, nat equal
